# doc_stat

./: Makefile  REAME.md  app.py  plot_builder.py  pyproject.toml  requirements.txt  run_tests.py
assets/: style.css
config/: __init__.py  settings.py
docs/: __init__.py
scripts/: __init__.py
src/: __init__.py
src/analysis/: __init__.py  correlation.py  mediation.py  normality.py  regression.py  sensitivity.py  statistical.py  synthetic_control.py
src/data/: __init__.py  data_loader.py
src/utils/: __init__.py
src/visualization/: __init__.py  correlation_plots.py  normality_plots.py  statistical_plots.py
tests/: __init__.py  test_analysis.py  test_data_loader.py  test_visualization.py
