[tool.poetry]
name = "doc-stat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit = "^1.40.1"
scikit-learn = "^1.5.2"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
pingouin = "^0.5.5"
openpyxl = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
